# fastapi-architecture

./: .env.example  .gitignore  .isort.cfg  Dockerfile  README.md  alembic.ini  cli.py  docker-compose.yml  lint.sh  poetry.txt  pyproject.toml  req.txt  ruff.toml  setup.cfg  setup.py
app/: utils.py
app/api/v1/: accounts.py
app/core/: application.py  logger.py  sentry.py  serializer.py  settings.py  tracing.py  urls.py
app/db/: setup.py
app/db/crud/: accounts.py  base.py
app/db/tables/: __init__.py  accounts.py
app/enums/: accounts.py
app/exceptions/: accounts.py  business.py  crud.py
app/libs/: utils.py
app/libs/asynclogger/: __init__.py  adapter.py  fields.py  handlers.py
app/libs/http_client/: __init__.py
app/libs/http_middleware/: __init__.py
app/logic/: accounts.py
app/migrations/: env.py
app/migrations/versions/: 2023-08-10-13-28_557822435728_init.py  2023-08-10-13-38_16b66b69ed19_accounts.py
app/schemas/: accounts.py
app/serializer/: accounts.py
kowl/: config.yaml
src/: .isort.cfg  errors.py  logger.py  setup.cfg  utils.py
src/api/: const.py
src/api/routers/: accounts.py  inner.py
src/apps/accounts/: crud.py  logic.py  models.py  serializer.py  utils.py
src/clients/: __init__.py
src/core/: config.py  main.py  middleware.py  scheduler.py  urls.py
src/crud/: base.py  crud_accounts.py
src/databases/: __init__.py  exceptions.py  sessions.py
src/db/: database.py  settings.py
src/domain/: __init__.py
src/enums/: accounts.py  base.py  errors.py
src/framework/: __init__.py  application.py  i18n.py  logger.py  secrets.py  settings.py
src/logic/: service_accounts.py
src/migrations/: __init__.py
src/models/: accounts.py
src/modules/: __init__.py
src/schemas/: accounts.py  base.py
src/serializer/: serialize_accounts.py
src/tools/: utils.py
(+54 files in other folders)
